# lorawan-development-kit

./: .gitignore  readme.md
rat_boards/rat_development_board/application/: CMakeLists.txt
rat_boards/rat_development_board/application/include/: application.h
rat_boards/rat_development_board/application/source/: application.c  main.c
rat_devices/rat_environment_monitor/application/: CMakeLists.txt
rat_devices/rat_environment_monitor/application/include/: application.h
rat_devices/rat_environment_monitor/application/source/: application.c  main.c
rat_devices/rat_indoor_monitor/application/: CMakeLists.txt
rat_devices/rat_indoor_monitor/application/include/: application.h
rat_devices/rat_indoor_monitor/application/source/: application.c
rat_devices/rat_thermocouple_monitor/application/: CMakeLists.txt
rat_devices/rat_thermocouple_monitor/application/include/: application.h
rat_devices/rat_thermocouple_monitor/application/source/: application.c  main.c
rat_libraries/rat_environment_sensor/include/: rat_environment_sensor.h
rat_libraries/rat_environment_sensor/source/: rat_environment_sensor.c
rat_libraries/rat_indoor_sensor/include/: rat_indoor_sensor.h
rat_libraries/rat_indoor_sensor/source/: rat_indoor_sensor.c
rat_libraries/rat_microcontroller/include/: rat_microcontroller.h
rat_libraries/rat_microcontroller/source/: rat_microcontroller.c
rat_libraries/rat_radio_module/include/: rat_radio_module.h
rat_libraries/rat_radio_module/source/: rat_radio_module.c
rat_libraries/rat_thermocouple_sensor/include/: rat_thermocouple_sensor.h
rat_libraries/rat_thermocouple_sensor/source/: rat_thermocouple_sensor.c
rat_libraries/rat_utilities/include/: rat_i2c.h  rat_spi.h  rat_uart.h  rat_utils.h
rat_libraries/rat_utilities/source/: rat_i2c.c  rat_spi.c  rat_uart.c  rat_utils.c
